<resources>
    <string name="app_name">InterviewMate</string>
    <string name="login">로그인</string>
    <string name="enter_email">이메일을 입력해주세요</string>
    <string name="enter_email_and_password">이메일과 비밀번호를\n입력하세요</string>
    <string name="enter_password">비밀번호를 입력해주세요</string>
    <string name="search_password">비밀번호 찾기</string>
    <string name="question_member">아직 회원이 아니신가요?</string>
    <string name="go_to_sign_up"><![CDATA[회원가입 >]]></string>
    <string name="sign_up">회원가입</string>
    <string name="nickname">닉네임</string>
    <string name="enter_nickname">닉네임을 입력해주세요</string>
    <string name="certify_email">이메일 인증하기</string>
    <string name="email">이메일</string>
    <string name="cerification_number">인증번호</string>
    <string name="enter_certifycation_number">인증번호를 입력해주세요</string>
    <string name="confirm">확인</string>
    <string name="password">비밀번호</string>
    <string name="next">다음</string>
    <string name="finish">완료</string>택
    <string name="select_job">직무 선택</string>
    <string name="select_job_description">직무를 한개 선택해주세요</string>
    <string name="select_skill">기술 스택 선택</string>
    <string name="select_skill_description">기술 스택을 한개 선택해주세요</string>
    <string name="select_language">언어 선택</string>
    <string name="select_language_description">언어를 한개 선택해주세요</string>
    <string name="sw_developer">SW 개발자</string>
    <string name="ai_developer">AI 개발자</string>
    <string name="language">Language</string>
    <string name="ai">AI</string>
    <string name="welcome_user">%s님 가입을 환영합니다!</string>
    <string name="interview">모의면접</string>
    <string name="do_interview">모의면접 진행하기</string>
    <string name="portfolio">포트폴리오</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="interview_description">회원가입시 선택했던 직무 키워드가\n맞는지 마이페이지에서 확인해보세요\n\n 포트폴리오 질문을 받고 싶다면\n마이페이지에서 포트폴리오를\n제출해주세요</string>
    <string name="select_keyword">키워드 선택</string>
    <string name="select_keyword_description">키워드를 선택해주세요</string>
    <string name="cs">CS</string>
    <string name="notice_fill_nickname">닉네임을 입력해주세요</string>
    <string name="notice_fill_emil">이메일을 입력해주세요</string>
    <string name="notice_fill_password">비밀번호을 입력해주세요</string>
    <string name="notice_send_email">이메일 인증을 완료해주세요</string>
    <string name="check_duplication">중복 확인</string>
    <string name="error_keyword">키워드 연결에 실패하였습니다</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="interview_notice">모의 면접 주의 사항</string>
    <string name="interview_notice_description">- 머리와 어깨가 같이 나올 수 있도록 각도를 조정해 주시길 바랍니다.\n - 허리와 어깨를 핀 바른 자세를 유지해 주시길 바랍니다.\n - 과도한 손동작은 어수선해 보일 수 있습니다.</string>
    <string name="go_to_home">홈으로 돌아가기</string>
    <string name="analysis_result">분석 결과</string>
    <string name="date_analysis">일자 별 분석</string>
    <string name="total_analysis">종합 분석</string>
    <string name="clicked_day">%d.%d (%s)</string>ㅁ
    <string name="action_analysis">행동 분석</string>
    <string name="answer_analysis">답변 분석</string>
    <string name="interview_over_description">모의 면접이 끝났습니다!\n 분석 결과는 약 10분 정도 소요됩니다.\n\n 분석 결과는 분석 결과 탭의 \n 해당 면접 날짜에서 확인하실 수 있습니다.</string>
    <string name="my_answer">나의 답변</string>
    <string name="recommended_answer">추천 답변</string>
    <string name="error_make_interview">인터뷰 생성에 실패하였습니다</string>
    <string name="error_make_pre_signed">pre-signed url을 가져오는데 실패했습니다</string>
    <string name="register_portfolio">포트폴리오 등록하기</string>
    <string name="register_portfolio_title">포트폴리오 등록</string>
    <string name="description_portfolio">- 포트폴리오 등록시 관련 키워드를 추출합니다.\n- 관련 키워드에 관한 질문을 모의 면접시 제공해줍니다.</string>
    <string name="error_portfolio">포트폴리오 업로드에 실패하였습니다. 다시 시도해주세요.</string>
    <string name="exist_portfolio">현재 등록된 포트폴리오가 있습니다</string>
    <string name="non_exist_portfolio">현재 등록된 포트폴리오가 없습니다</string>
    <string name="zero">0</string>
    <string name="_100">100</string>
    <string name="total_score">전체 점수</string>
    <string name="keyword">키워드</string>
    <string name="question_eyes_contact">질문별 시선 불안 정도</string>
    <string name="question_pose_analysis">질문별 자세 불안 정도</string>
    <string name="num_eyes_contact">회차별 시선 불안 정도</string>
    <string name="num_pose_analysis">회차별 자세 불안 정도</string>
    <string name="eyes_contact_by_turns">회차별 시선 처리</string>
    <string name="pose_analysis_by_turns">회차별 자세 분석</string>
    <string name="percent_of_keyword">답변한 키워드 비율</string>
    <string name="interview_video">인터뷰 영상</string>
    <string name="analysis_not_yet">아직 분석이 완료되지 않았습니다. 조금 더 기다려 주세요.</string>
    <string name="deep_question">심층 질문</string>
    <string name="average_score">평균 점수 : %d 점</string>
    <string name="score">%d 점</string>
</resources>