<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="answerAnalysisInfo"
            type="com.example.domain.model.analysis.AnswerAnalysisInfo" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="5dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/shape_answer"
        android:elevation="2dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/tv_question"
            style="@style/title_text.small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{answerAnalysisInfo.question}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="OSI 7계층에 대해 설명하시오" />

        <TextView
            android:id="@+id/tv_my_answer_header"
            style="@style/title_text.deep_blue.very_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/my_answer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_question" />

        <TextView
            android:id="@+id/tv_my_answer_description"
            style="@style/small_text.gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:lineSpacingExtra="1dp"
            android:text="@{answerAnalysisInfo.answer}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_answer_header"
            tools:text="osi는 어쩌구 저쩌구 그러하다" />

        <TextView
            android:id="@+id/tv_recommended_answer_header"
            style="@style/title_text.yellow.very_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/recommended_answer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_answer_description" />

        <TextView
            android:id="@+id/tv_recommended_answer_description"
            style="@style/small_text.gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:lineSpacingExtra="1dp"
            android:text="@{answerAnalysisInfo.bestAnswer}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_recommended_answer_header"
            tools:text="OSI (Open Systems Interconnection) 모델은 컴퓨터 네트워크 아키텍처의 개념을 나타내는 일곱 개의 계층으로 구성된 표준 모델입니다.
각 계층은 고유한 역할을 수행하며 상위 계층에서 하위 계층으로 데이터를 전달하고, 하위 계층에서는 상위 계층으로부터 받은 데이터를 처리하여 다음 계층으로 전달합니다.
" />

        <ImageButton
            android:id="@+id/btn_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:src="@drawable/arrow_down"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_recommended_answer_description" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_recommended_answer_description">

            <TextView
                android:id="@+id/tv_analysis_answer"
                style="@style/title_text.deep_blue.very_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="답변 분석"
                android:textColor="@color/dark_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_analysis_answer_list"
                style="@style/small_text.gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:lineSpacingExtra="1dp"
                android:text="@{answerAnalysisInfo.answerAnalysis}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_analysis_answer" />

            <TextView
                android:id="@+id/tv_extra_question"
                style="@style/title_text.deep_red.very_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/deep_question"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_analysis_answer_list" />

            <TextView
                android:id="@+id/tv_extra_question_list"
                style="@style/small_text.gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:lineSpacingExtra="1dp"
                android:text="@{answerAnalysisInfo.deepQuestions}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_extra_question" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>